# Low-Slow-Small-Object-Classification

./: .gitignore  LICENSE  README.md  pyproject.toml
src/low_slow_small_object_classification/configs/: rocket.yaml  stacking.yaml  swin.yaml
src/low_slow_small_object_classification/data/: datasets.py  rd_preprocessor.py  track_preprocessor.py  utils.py
src/low_slow_small_object_classification/models/: multi_rocket.py  stacking.py  swin3d.py  utils.py
src/low_slow_small_object_classification/scripts/: test.py  train.py  visualize.py
src/low_slow_small_object_classification/utils/: config.py  logger.py
