[project]
authors = [{name = "IgnorantCopy", email = "231880174@smail.nju.edu.cn"}]
dependencies = ["thop>=0.1.1.post2209072238,<0.2", "tsai>=0.2.17,<0.5"]
name = "Low-Slow-Small-Object-Classification"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
low_slow_small_object_classification = { path = ".", editable = true }

[tool.pixi.feature.gpu.system-requirements]
cuda = "12.8"

[tool.pixi.feature.gpu.dependencies]
cuda-version = "12.8.*"
pytorch-gpu = "*"

[tool.pixi.feature.cpu.dependencies]
pytorch-cpu = "*"

[tool.pixi.environments]
loss-cls-cpu = ["cpu"]
loss-cls-gpu = ["gpu"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
pytorch = ">=2.7.1,<3"
torchvision = ">=0.22.0,<0.25"
pixi-pycharm = ">=0.0.9,<0.0.10"
h5py = ">=3.15.1,<4"
einops = ">=0.8.1,<0.9"
notebook = ">=7.4.7,<8"
numba = ">=0.62.1,<0.63"
numpy = ">=2.3.4,<3"
opencv = ">=4.12.0,<5"
pandas = ">=2.3.3,<3"
polars = ">=1.35.1,<2"
plotly = ">=6.3.1,<7"
scikit-learn = ">=1.7.2,<2"
scipy = ">=1.16.3,<2"
sympy = ">=1.14.0,<2"
tensorboard = ">=2.20.0,<3"
timm = ">=1.0.21,<2"
tqdm = ">=4.67.1,<5"
lightning = ">=2.5.5,<3"
loguru = ">=0.7.3,<0.8"
pyarrow = ">=20.0.0,<23"
